force-app/main/default/objects/Field_Change_Archive__b/Field_Change_Archive__b.object-meta.xml
<CustomObject>
    <label>Field_Change_Archive</label>
    <pluralLabel>Field_Change_Archive</pluralLabel>
</CustomObject>