force-app/main/default/objects/Field_Change_Archive__b/fields/ChangedBy__c.field-meta.xml
<CustomField>
    <fullName>ChangedBy__c</fullName>
    <label>ChangedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Change_Archive</relationshipName>
    <type>Lookup</type>
</CustomField>