force-app/main/default/objects/Field_Change_Archive__b/fields/ChangedOn__c.field-meta.xml
<CustomField>
    <fullName>ChangedOn__c</fullName>
    <label>ChangedOn</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>