force-app/main/default/objects/Field_Change_Archive__b/fields/Extra__c.field-meta.xml
<CustomField>
    <fullName>Extra__c</fullName>
    <label>Extra</label>
    <length>100</length>
    <type>Text</type>
</CustomField>