force-app/main/default/objects/Field_Change_Archive__b/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <label>FieldName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>