force-app/main/default/objects/Field_Change_Archive__b/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>ParentId</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>